--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/diarmuid-murphy/furlong-feasts#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
