--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   },
   "homepage": "https://github.com/diarmuid-murphy/furlong-feasts#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   }
 }
